--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "author": "<israelfontes@ufrn.edu.br>",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-basic-auth": "^1.2.0"
+    "express-basic-auth": "^1.2.0",
+    "nodemon": "^2.0.7"
   }
 }
