search airport per city name

--- a/package.json
+++ b/package.json
@@ -11,5 +11,6 @@
     "express": "^4.17.1",
     "express-basic-auth": "^1.2.0",
     "nodemon": "^2.0.7"
-  }
+  },
+  "start": "node src/index.js"
 }
