--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "express-basic-auth": "^1.2.0",
     "nodemon": "^2.0.7"
   },
-  "start": "node src/index.js"
+  "scripts": {
+    "start": "node src/index.js"
+  }
 }
+  
